//protocol=555;
option java_package = "com.chuangyou.common.protobuf.pb";
option java_outer_classname = "PlayerSimpleSnapRespProto";
message PlayerSimpleSnapRespMsg {
	required int64 playerId = 1;//要查询玩家的角色ID
	required int32 teamId = 2;
	required int32 level = 3;
	required int32 job   = 4;
	required int32 skinId = 5;
	required string nickName = 6;
	required bool isOnline   = 7; //true：在线
	optional bool isFriend = 8;//是否是好友
}